# simple-lm-agent

./: .env.example  README.md  TODO.md  agent.example.py  error_log.txt  example.python.py  package-lock.json  package.json
.claude/: settings.local.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  test.rs
